[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "demo"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Angus Hollands", email = "goosey15@gmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []
version = "0.0.0"

[project.urls]
Documentation = "https://github.com/unknown/demo#readme"
Issues = "https://github.com/unknown/demo/issues"
Source = "https://github.com/unknown/demo"

[tool.hatch.build.targets.wheel.hooks.custom]
