[build-system]
requires = ["hatchling>=1.10.0"]
build-backend = "hatchling.build"

[project]
name = "demo"
description = ''
readme = "README.md"
requires-python = ">=3.7"
license = "MIT"
keywords = []
authors = [
  { name = "Angus Hollands", email = "goosey15@gmail.com" },
]
dependencies = []
version = "0.0.0"


[tool.hatch.build.targets.wheel.hooks.custom]
